Fix auth property naming
